force-app/main/default/objects/Master_Record_Type_Table__mdt/Master_Record_Type_Table__mdt.object-meta.xml
<CustomObject>
    <label>Master Record Type Table</label>
    <pluralLabel>Master Record Type Table</pluralLabel>
</CustomObject>