force-app/main/default/objects/Master_Record_Type_Table__mdt/fields/Record_Type_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_API_Name__c</fullName>
    <label>Record Type API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>