force-app/main/default/objects/Master_Record_Type_Table__mdt/fields/X15_Digit_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>X15_Digit_Record_Type_Id__c</fullName>
    <label>15 Digit Record Type Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>