force-app/main/default/objects/Master_Record_Type_Table__mdt/fields/X18_Digit_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Record_Type_Id__c</fullName>
    <label>18 Digit Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>